[gd_scene load_steps=17 format=2]

[ext_resource path="res://sprites/elcitrap_b.png" type="Texture" id=1]
[ext_resource path="res://CapturedElcitrap.gd" type="Script" id=2]
[ext_resource path="res://sprites/elcitrap_r.png" type="Texture" id=3]
[ext_resource path="res://sprites/elcitrap_g.png" type="Texture" id=4]
[ext_resource path="res://sprites/elcitrap.png" type="Texture" id=5]
[ext_resource path="res://Nunito/Nunito-Regular.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://sprites/science_icon.png" type="Texture" id=7]
[ext_resource path="res://sprites/humanities_icon.png" type="Texture" id=8]
[ext_resource path="res://sprites/arts_icon.png" type="Texture" id=9]
[ext_resource path="res://audio/effects/back.wav" type="AudioStream" id=10]
[ext_resource path="res://audio/effects/next.wav" type="AudioStream" id=11]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "blue",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "green",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "red",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 26.7374

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 6 )

[sub_resource type="StyleBoxTexture" id=4]
texture = ExtResource( 5 )
region_rect = Rect2( 0, 0, 1200, 1200 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 8 ) ],
"loop": true,
"name": "humanities",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "science",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ) ],
"loop": true,
"name": "arts",
"speed": 5.0
} ]

[node name="CapturedElcitrap" type="RigidBody2D"]
input_pickable = true
collision_layer = 2
gravity_scale = 0.0
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.3, 0.3 )
frames = SubResource( 1 )
animation = "red"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Label" type="Label" parent="."]
margin_left = -24.0
margin_top = -8.0
margin_right = 24.0
margin_bottom = 6.0
custom_fonts/font = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PopupDialog" type="PopupDialog" parent="."]
visible = true
margin_left = 324.0
margin_top = 112.0
margin_right = 384.0
margin_bottom = 172.0
rect_scale = Vector2( 6.16152, 6.16152 )
mouse_filter = 2
custom_styles/panel = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="PopupDialog"]
self_modulate = Color( 1, 1, 1, 0.356863 )
position = Vector2( 29.8628, 29.457 )
scale = Vector2( 0.07, 0.07 )
frames = SubResource( 5 )
animation = "science"

[node name="Select" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
volume_db = -11.0

[node name="Deselect" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
volume_db = -11.0
[connection signal="input_event" from="." to="." method="_on_CapturedElcitrap_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_CapturedElcitrap_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_CapturedElcitrap_mouse_exited"]
